19.1/ja/すべてのカテゴリ/関数/Python.md
# Python



### Python Connect

**構文:** PythonConnection = Python Connect ()

**説明:** Python接続のスクリプト可能オブジェクトを戻す。

**JMP追加されたバージョン:** 14

```jsl

PythonConnection = Python Connect();version = PythonConnection << Get Version;Show( version );

```

### Python Create JPIP CMD

**構文:** Python Create JPIP CMD()

**説明:** Pythonのpipコマンドの、jpipコマンドラインラッパースクリプトを作成する。ディレクトリ選択ダイアログが表示されるので、生成されるスクリプトの保存先となるディレクトリを指定する。このスクリプトはpipの全機能を提供すると同時に、JMPの隔離されたPython環境に対して必要な環境変数を正しく設定する。

**JMP追加されたバージョン:** 18

**例 1**

```jsl

Python Create JPIP CMD();

```

**例 2**

```jsl

conn = Python Connect();conn << Create JPIP CMD();

```

### Python Execute

**構文:** Python Execute( { list of Inputs }, { list of Outputs }, statements &lt; , echo( 1 | 0 ) &gt; )

**説明:** 入力値のリストを送り、ステートメントを実行し、結果のリストを戻す。オプションのecho()パラメータのデフォルト値は真(True)。echoパラメータは、Pythonソースのログへのエコーを制御する。True (1)はソースのエコーを有効にし、0はログへのエコーを抑制する。

**JMP追加されたバージョン:** 14

**例 1**

```jsl

a = "abcdef";d = 3.141;x = 0;z = 0;v = [1 0 0, 0 1 0, 0 0 1];// pi, e, phi, c, Plank's, Faraday, 345 trianglem = [3.141 2.718 1.618,2.997 6.626 9.648,3 4 5];ml = Python Execute(	{v, m, a, d},	{x, z, a, d},	"\[import numpy as npa = np.multiply(v, m) # matrix productd = np.divide(v, m) # matrix divisionz = np.multiply(m, np.linalg.inv(v)) # m * inv(v) called Left divisionx = np.multiply(np.linalg.inv(m), v) # inv(m) * v called right division]\");Show( v, m, ml, x, z, a, d );

```

**例 2**

```jsl

x1 = 1;x2 = 2;y1 = 1;y2 = 2;z1 = 1;z2 = 2;v = [1 0 0, 0 1 0, 0 0 1];// pi, e, phi, c, Plank's, Faraday, 345 trianglem = [3.141 2.718 1.618,2.997 6.626 9.648,3 4 5];ml = Python Execute(	{v, m},	{x1, x2, y1, y2, z1, z2},	"\[import numpy as npx1 = np.multiply(v, m) # matrix productprint('x1=', x1)x2 = np.divide(v, m) # matrix divisionprint('x2=', x2)y1 = np.dot(v, m) # dot product of v and mprint('y1=', y1)y2 = np.dot(m, v) # dot product of m and vprint('y2=', y2)z1 = np.inner(v, m) # inner product of v and mprint('z1=', z1)z2 = np.inner(m, v) # innder product of m and vprint('z2=', z2)]\");Show( v, m, ml, x1, x2, y1, y2, z1, z2 );

```

### Python Get

**構文:** y = Python Get( name )

**説明:** Pythonからデータを取得する。引数nameには、数値、文字列、行列、リスト、ディクショナリ、データテーブル、データフレーム、日付時間、numpy.datetime64といったデータタイプのものを指定することができる。

**JMP追加されたバージョン:** 14

#### Datetime

```jsl

date1 = As Date( Today() );Python Send( date1 );date2 = Python Get( date1 );Show( date1, date2 );

```

#### numpy.datetime64

```jsl

Python Install Packages( "numpy" );Python Submit( "import numpy as np" );Python Submit( "datetime64 = np.datetime64('1989-10-05')" );numpy_datetime = Python Get( datetime64 );Show( numpy_datetime );

```

**例 1**

```jsl

x1 = {1, 2, 3};Python Send( x1 );x2 = Python Get( x1 );Show( x1, x2 );

```

### Python Get Version

**構文:** version = Python Get Version()

**説明:** JMPのPythonインターフェースで使用されているPythonのバージョン番号を戻す。

**JMP追加されたバージョン:** 14

```jsl

version = Python Get Version();Show( version );

```

### Python Init

**構文:** PythonConnection = Python Init( )

**説明:** 注: この関数は、JMP 18で廃止された。JMP18で同等の処理は、Python Connect()で行える。

**JMP追加されたバージョン:** 14

**例 1**

```jsl

Python Init();Python Submit( "\[str = 'The quick brown fox jumps over the lazy dog';]\" );getStr = Python Get( str );Show( getStr );

```

**例 2**

```jsl

PythonConnection = Python Init();PythonConnection << Submit( "\[str = 'The quick brown fox jumps over the lazy dog';]\" );getStr = Python Get( str );Show( getStr );

```

### Python Install Packages

**構文:** Python Install Packages( packages )

**説明:** これは、Pythonパッケージを、JMPのsite-packagesディレクトリにインストールするラッパー。シンプルなパッケージインストール以外の処理を行うには、Python Create JPIP CMD()を参照して、Directory Pick()で選択されたディレクトリ内にコマンドラインpipラッパースクリプトを作成する。また、[スクリプトの索引]のPythonカテゴリにあるjmputils.jpipを参照し、JMPのPythonスクリプトウィンドウからインストールを実行することもできる。

**JMP追加されたバージョン:** 18

**例 1**

```jsl

// install numpy and pandas packagesPython Install Packages( "numpy pandas" );

```

**例 2**

```jsl

// install numpy and pandas packagesPython Install Packages( {"numpy", "pandas"} );

```

**例 3**

```jsl

// install numpy and pandas packagesconn = Python Connect();conn << Install Packages( "numpy pandas" );

```

### Python Is Connected

**構文:** connected = Python Is Connected()

**説明:** 注: この関数は、JMP 18で廃止された。常に1を戻す。

**JMP追加されたバージョン:** 14

```jsl

x = Python Is Connected();Show( x );

```

### Python JMP Name to Python Name

**構文:** Python name = Python JMP Name To Python Name( JMP name )

**説明:** JMPの変数名を、Pythonの変数命名規則に従ってPythonの変数名にマップする。

**JMP追加されたバージョン:** 14

```jsl

Python name = Python JMP Name to Python Name( a b c );Show( Python name );

```

### Python Reset

**構文:** Python Reset()

**説明:** 主にオブジェクトへの参照を消去することで、共有されたPython環境をリセットする。読み込まれたモジュールの読み込みキャッシュには変化がない。これはPython環境自体の限界である。共有ライブラリをロードするモジュールを、実行中のプロセスによってアンロードすることはできない。純粋なPythonコードを再ロードする方法については、Python.orgのマニュアルでimportlib reload()を参照してください。

**JMP追加されたバージョン:** 19

```jsl

pi = 3.1415927;Python Send( pi );Python Submit( "print(pi)" );Python Reset();// will show error, pi not definedPython Submit( "print(pi)" );

```

### Python Send

**構文:** Python Send( name, &lt;Python Name( name )&gt; )

**説明:** Pythonにデータを送る。引数nameには、数値、文字列、行列、リスト、データテーブル、データテーブル列、日付といったデータタイプのものを指定することができる。

**JMP追加されたバージョン:** 14

#### データテーブル

```jsl

x = {1, 2, 3};Python Send( x );dt = Open( "$SAMPLE_DATA/Big Class.jmp" );Python Send( dt );Python Submit( "print(x)" );Python Submit( "print(dt)" );

```

#### 列

```jsl

dt = Open( "$SAMPLE_DATA/Big Class.jmp" );Python Send( dt:weight );Python Submit( "print(dt_weight)" );

```

#### 日付

```jsl

date = As Date( Today() );Python Send( date );Python Submit( "print(date)" );

```

### Python Send File

**構文:** Python Send File( filename, &lt;Python Name( name )&gt; )

**説明:** Pythonにデータファイルを送る。引数filenameは、Pythonに送られるファイルのパス名。

**JMP追加されたバージョン:** 14

```jsl

Python Send File( "$SAMPLE_DATA/Big Class.jmp" );Python Send File( "$SAMPLE_DATA/Baseball.jmp" );Python Submit( "print(Big_Class)" );Python Submit( "print(Baseball)" );

```

### Python Submit

**構文:** Python Submit( statements &lt; , echo( 1 | 0 ) &gt; )

**説明:** Pythonにステートメントをサブミットする。ステートメントは、文字列の値、または文字列の値のリスト。オプションのecho()パラメータのデフォルトは1。echoパラメータは、Pythonソースのログへのエコーを制御する。True (1)はソースのエコーを有効にし、0はログへのエコーを抑制する。

**JMP追加されたバージョン:** 14

```jsl

Python Submit( "\[str = 'The quick brown fox jumps over the lazy dog'a = 200]\" );getStr = Python Get( str );getNum = Python Get( a );Show( getStr, getNum );

```

### Python Submit File

**構文:** Python Submit File( path )

**説明:** path引数によって指定されたファイルにあるステートメントを、Pythonで実行する。

**JMP追加されたバージョン:** 14

```jsl

Python Submit File( "some_Python_source.py" );

```

### Python Term

**構文:** Python Term()

**説明:** 注: この機能は、JMP 18で廃止されました。指定しても処理を行いません。

**JMP追加されたバージョン:** 14

